# tcode

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/fixtures/vt/: sessions.json  vt-markdown-demo.jsonl
.github/workflows/: ci.yml  release.yml
THIRD_PARTY_LICENSES/: difftastic.txt
assets/fonts/lilex/: OFL.txt
assets/icons/app/: tcode.icns  tcode.rc
assets/icons/app/tcode.icon/: icon.json
assets/orchestrate/: claude.md  codex.md  fable.md  generic.md
crates/agent/: Cargo.toml
crates/agent/assets/pi/: tcode-permissions.ts
crates/agent/examples/: acp_probe.rs  image_probe.rs  interrupt_probe.rs  opencode_probe.rs  pi_probe.rs  probe.rs  read_only_probe.rs  steer_probe.rs
crates/agent/src/: acp.rs  claude.rs  codex.rs  lib.rs  opencode.rs  pi.rs  process.rs  subagent_tail.rs
crates/agent/src/codex/: developer_instructions.rs
crates/agent/tests/fixtures/claude/: simple_trace.jsonl  subagent_trace.jsonl  tool_use_trace.jsonl
crates/agent/tests/fixtures/codex/: v2_messages.jsonl
crates/agent/tests/fixtures/opencode/: sse_events.jsonl
crates/agent/tests/fixtures/pi/: rpc_events.jsonl
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  smoke.rs
crates/computer-use-mcp/: Cargo.toml
crates/computer-use-mcp/src/: backend.rs  config.rs  lib.rs  outline.rs  permissions.rs  state.rs  tools.rs
crates/computer-use-mcp/src/backend/: stub.rs
crates/computer-use-mcp/src/backend/macos/: ax.rs  capture.rs  input.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: acp.rs  attachments.rs  git.rs  lib.rs  project.rs  provider_models.rs  provider_status.rs  relay.rs  session.rs  settings.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/i18n/tests/: public_api.rs
crates/orchestrate-mcp/: Cargo.toml
crates/orchestrate-mcp/src/: lib.rs  tools.rs
crates/preview-mcp/: Cargo.toml
crates/preview-mcp/src/: js.rs  lib.rs  ports.rs  tools.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  blocking.rs  event.rs  lib.rs  terminal.rs  ui_facade.rs
crates/services/: Cargo.toml
crates/services/src/: acp_registry.rs  checkpoints.rs  desktop.rs  difftastic.rs  git.rs  lib.rs  process.rs  provider_auth.rs  provider_probe.rs  relaunch.rs  settings.rs  store.rs  user_files.rs  version_check.rs  workspace.rs
crates/services/src/import/: claude.rs  codex.rs  mod.rs  tests.rs
crates/services/tests/: vt_fixture_replay.rs
crates/services/tests/fixtures/: difftastic_0_69_0_after.rs  difftastic_0_69_0_before.rs  difftastic_0_69_0_rust.json
crates/term/: Cargo.toml
crates/term/src/: hyperlinks.rs  lib.rs  mappings.rs  pty_info.rs
crates/ui/: Cargo.toml
crates/ui/assets/: README.md
crates/ui/benches/: markdown_perf.rs
crates/ui/src/: acp_panel.rs  add_project_dialog.rs  assets.rs  attachments.rs  chat.rs  commit_dialog.rs  composer.rs  context_meter.rs  diff_panel.rs  git.rs  highlight.rs  lib.rs  material.rs  orchestrate_settings.rs  palette.rs  pasteboard.rs  plan_panel.rs  preview_panel.rs  provider_card.rs  provider_dialog.rs  provider_model_picker.rs  provider_models.rs  provider_status.rs  runtime_event.rs  schedule.rs  settings.rs  settings_page.rs  shell.rs  shortcut.rs  sidebar.rs  terminal_drawer.rs  time.rs  toast.rs  window_caption.rs  workspace_walk.rs
crates/ui/src/diff/: algorithm.rs  mod.rs  model.rs  parse.rs  view.rs
crates/ui/src/markdown/: inline.rs  inline_flow.rs  link_target.rs  mod.rs  nodes.rs  parse.rs  render.rs  selection.rs  state.rs  style.rs  utils.rs  view.rs  window_selection.rs
docs/: DESIGN.md  computer-use.md  visual-redesign.md
locales/: en.yml  zh-CN.yml
src/: acp_registry.rs  app.rs  assets.rs  blocking.rs  checkpoints.rs  git.rs  main.rs  process.rs  provider_models.rs  provider_status.rs  session.rs  settings.rs  shell_env.rs  smoke.rs  store.rs  version_check.rs
src/import/: claude.rs  codex.rs  mod.rs  scan.rs  tests.rs
src/ui/: acp_panel.rs  add_project_dialog.rs  attachments.rs  chat.rs  commit_dialog.rs  composer.rs  composer_trigger.rs  context_meter.rs  diff_panel.rs  mod.rs  palette.rs  plan_panel.rs  preview_panel.rs  provider_card.rs  settings_page.rs  sidebar.rs  terminal_drawer.rs  toast.rs  workspace_walk.rs
themes/: tcode.json
tools/: vm-screenshot.sh  windowid.c
tools/vm-seed/: README.md  sessions.json  vm-seed-rust-cache-fix.jsonl
