[workspace]
members = ["crates/agent", "crates/term", "crates/preview-mcp"]

[package]
name = "tcode"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "crates/agent" }
term = { path = "crates/term" }
preview-mcp = { path = "crates/preview-mcp" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
gpui-wry = { git = "https://github.com/longbridge/gpui-component" }
wry = { version = "0.53.3", package = "lb-wry" }
raw-window-handle = { version = "0.6", features = ["std"] }
base64 = "0.22"
log = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
async-channel = "2"
env_logger = "0.11"
rust-i18n = "4"
sys-locale = "0.3"

[features]
default = ["runtime-shaders"]
runtime-shaders = ["gpui_platform/runtime_shaders"]
