[workspace]
members = [
    "crates/agent",
    "crates/core",
    "crates/i18n",
    "crates/services",
    "crates/runtime",
    "crates/term",
    "crates/preview-mcp",
    "crates/orchestrate-mcp",
    "crates/computer-use-mcp",
    "crates/ui",
    "crates/app",
]
resolver = "3"
default-members = ["crates/app"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
