[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
async-channel = "2"
async-trait = "0.1"
futures-lite = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
toml = "1.1"
