[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { version = "1.2", features = [
    "unstable_auth_methods",
    "unstable_end_turn_token_usage",
] }
async-channel = "2"
futures-lite = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
toml = "1.1"
