[package]
name = "tcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tcode"
path = "src/main.rs"

[dependencies]
agent = { path = "../agent" }
tcode-i18n = { path = "../i18n" }
tcode-services = { path = "../services" }
tcode-runtime = { path = "../runtime" }
tcode-ui = { path = "../ui" }
preview-mcp = { path = "../preview-mcp" }
orchestrate-mcp = { path = "../orchestrate-mcp" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
env_logger = "0.11"
log = "0.4"

[features]
default = ["runtime-shaders"]
runtime-shaders = ["gpui_platform/runtime_shaders"]
