[package]
name = "tcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tcode"
path = "src/main.rs"

[package.metadata.bundle]
name = "Tcode"
identifier = "com.tryanks.tcode"
icon = ["../../assets/icons/app/tcode.icns"]

[dependencies]
agent = { path = "../agent" }
tcode-i18n = { path = "../i18n" }
tcode-services = { path = "../services" }
tcode-runtime = { path = "../runtime" }
tcode-ui = { path = "../ui" }
preview-mcp = { path = "../preview-mcp" }
orchestrate-mcp = { path = "../orchestrate-mcp" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
env_logger = "0.11"
log = "0.4"

[features]
default = ["runtime-shaders"]
runtime-shaders = ["gpui_platform/runtime_shaders"]

[build-dependencies]
embed-resource = "3.0.11"
