[package]
name = "computer-use-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15", features = [
    "macros",
    "schemars",
    "server",
    "transport-streamable-http-server",
] }
axum = "0.8"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "process",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
base64 = "0.22"
tcode-services = { path = "../services" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.24", features = ["highsierra"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
