[package]
name = "orchestrate-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15", features = [
    "macros",
    "schemars",
    "server",
    "transport-streamable-http-server",
] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
