[package]
name = "tcode-services"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
tcode-core = { path = "../core" }
base64 = "0.22"
bzip2 = "0.5"
chrono = "0.4"
dirs = "6"
flate2 = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
smol = "2"
tar = "0.4"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate-flate2", "flate2", "bzip2"] }
