[package]
name = "tcode-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
tcode-core = { path = "../core" }
tcode-i18n = { path = "../i18n" }
tcode-runtime = { path = "../runtime" }
term = { path = "../term" }
preview-mcp = { path = "../preview-mcp" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
async-channel = "2"
base64 = "0.22"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
gpui-wry = { git = "https://github.com/longbridge/gpui-component" }
wry = { version = "0.53.3", package = "lb-wry" }
raw-window-handle = { version = "0.6", features = ["std"] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
