[package]
name = "tcode-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
tcode-core = { path = "../core" }
tcode-i18n = { path = "../i18n" }
tcode-runtime = { path = "../runtime" }
term = { path = "../term" }
preview-mcp = { path = "../preview-mcp" }
computer-use-mcp = { path = "../computer-use-mcp" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
async-channel = "2"
base64 = "0.22"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
rushdown = "0.18.0"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "dump-load"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
gpui-wry = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
wry = { version = "0.53.3", package = "lb-wry" }
raw-window-handle = { version = "0.6", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", features = ["NSGraphicsContext", "NSImage", "NSImageRep", "objc2-core-graphics"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFData", "CFString"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSError"] }
objc2-image-io = { version = "0.3.2", features = ["CGImageDestination"] }
objc2-web-kit = { version = "0.3.2", features = ["WKSnapshotConfiguration", "WKWebView"] }

[dev-dependencies]
criterion = "0.7"
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
tcode-services = { path = "../services" }

[[bench]]
name = "markdown_perf"
harness = false
